# Tablemind

./: .dockerignore  .envrc  .gitignore  compose.yaml  docker-compose.dev.yml  docker-compose.yml  env.example  nginx.conf  pyproject.toml
Auth/: Dockerfile  entrypoint_auth.sh
Auth/src/: main.py
Auth/src/domain/services/token/: tokens.py
Auth/src/infrastructure/repositories/: files.py
Auth/src/routers/: auth.py  files.py
Auth/src/utils/: files.py
Core/: Dockerfile  entrypoint_core.sh  pyproject.toml
Core/src/: main.py  pyproject.toml  seed.py
Core/src/routers/: __init__.py  job.py  media.py  model.py  prompt.py
Frontend/: Dockerfile
Frontend/tablemind/: .tool-versions  next.config.js  package.json  pnpm-lock.yaml
Frontend/tablemind/app/: page.tsx
Frontend/tablemind/app/confirmation/: page.tsx
Frontend/tablemind/app/contact/: page.tsx
Frontend/tablemind/app/faq/: page.tsx
Frontend/tablemind/app/features/: page.tsx
Frontend/tablemind/app/load/: page.tsx
Frontend/tablemind/app/login/: page.tsx
Frontend/tablemind/app/model/: page.tsx
Frontend/tablemind/app/pricing/: page.tsx
Frontend/tablemind/app/privacy/: page.tsx
Frontend/tablemind/app/prompt/: page.tsx
Frontend/tablemind/app/register/: page.tsx
Frontend/tablemind/app/results/: page.tsx
Frontend/tablemind/app/terms/: page.tsx
Frontend/tablemind/components/layout/: Footer.tsx  Topbar.tsx
Frontend/tablemind/components/sections/root/: FAQ.tsx  Features.tsx  FinalCTA.tsx  Hero.tsx  HowItWorks.tsx  Pricing.tsx  Testimonials.tsx
Frontend/tablemind/lib/: Socket.tsx
Persistence/: Dockerfile  entrypoint_pers.sh
Persistence/src/: pyproject.toml
Persistence/src/migrator/alembic/: env.py
Persistence/src/migrator/alembic/versions/: 539143a3030a_create_system.py  539143a3031a_create_auth.py  539143a3032a_create_core_actors.py  539143a3032b_create_core_forms.py  539143a3032c_create_rules.py  539143a3032d_create_grading.py  539143a3032e_seed_submissions.py  539143a3033a_create_interactions.py
Persistence/src/models/: pyproject.toml
Persistence/src/models/src/models/: __init__.py  enums.py  job.py  resources.py  targets.py
Persistence/src/schemer/: schemer.py
Persistence/src/seeder/: seeder.py
Persistence/src/seeder/seeds/: 00_a_seed.py  00a_seed_log_action_types.py  00b_seed_file_types.py  00c_seed_roles.py  00d_seed_user_tiers.py  10a_seed_users.py  1b_seed_rule_types.py  1c_seed_relational_operators.py  1f_seed_submission_status_types.py  20a_seed_sectors.py  20b_seed_entities.py  2a_seed_models.py  30a_seed_field_types.py  30b_seed_forms.py  30c_seed_section_types.py  30d_seed_sections.py  30e_seed_questions.py  33a_seed_notification_types.py  33b_seed_comment_types.py
Scripts/: builder.sh  launcher.sh  pusher.sh  secrets.sh
Secrets_Template/: env_example  users.toml
Template/: Template.xlsx
Worker/: Dockerfile  entrypoint_worker.sh  pyproject.toml
Worker/src/: llm.py  main.py  pyproject.toml
backend/: requirements.txt
backend/app/: seed.py
frontend/: Dockerfile
shared/handlers/: auth.py
shared/utils/: auth.py
worker/: requirements.txt
worker/app/: main.py
