[project]
name = "IIP-dev"
version = "0.1.0"
description = "Pyproject para desarrollo de todo el proyecto. SOLO DEV, NO PRODUCCIÓN"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "google-genai>=1.69.0",
    "models",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "psycopg[binary]>=3.3.3",
    "pydantic[email]>=2.12.5",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "shared",
    "shared-db",
    "shared-models",
    "shared-schemas",
    "shared-utils",
    "sqlalchemy>=2.0.48",
    "uuid-utils>=0.14.1",
    "uvicorn>=0.42.0",
]

[tool.uv.sources]
shared-db = { workspace = true }
shared-utils = { workspace = true }
shared-models = { workspace = true }
shared-schemas = { workspace = true }
shared = { workspace = true }
models = { workspace = true }

[tool.uv.workspace]
members = [
    "Packages/shared_db",
    "Packages/shared_models",
    "Packages/shared_schemas",
    "Packages/shared_utils",
    "Packages/shared",
    "Persistence/src/models"
]
