[project]
name = "visualizador-iip"
version = "0.1.0"
description = "Pyproject para desarrollo de todo el proyecto. SOLO DEV, NO PRODUCCIÓN"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "celery>=5.6.3",
    "cryptography>=46.0.6",
    "google-auth>=2.49.1",
    "google-genai>=1.69.0",
    "redis>=7.4.0",
    "uvicorn>=0.42.0",
]
