[project]
name = "api"
version = "0.1.0"
description = "Contenedor encargado de publicar endpoints desde la base de datos"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "celery>=5.6.3",
    "fastapi>=0.120.2",
    "google-auth>=2.49.1",
    "google-genai>=1.69.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.44",
    "uuid-utils>=0.14.0",
    "uvicorn>=0.38.0",
]
