[project]
name = "iip-auth"
version = "0.1.0"
description = "Pyproject para dev de auth."
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uuid-utils>=0.14.0",
]
