[project]
name = "api"
version = "0.1.0"
description = "Contenedor encargado de publicar endpoints desde la base de datos"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "celery>=5.6.3",
    "cryptography>=46.0.6",
    "google-auth>=2.49.1",
    "google-genai>=1.69.0",
    "redis>=7.4.0",
    "uvicorn>=0.42.0",
]
