[project]
name = "models"
version = "0.1.0"
description = "package para configurar los models."
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/models"]
